--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-server-express": "^1.3.4",
