--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,12 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "graphql": "^0.13.2",
+    "graphql": "^14.4.2",
     "graphql-server-express": "^1.3.4",
-    "graphql-tools": "^2.24.0",
+    "graphql-tools": "^4.0.5",
     "nodemon": "^1.17.3"
+  },
+  "devDependencies": {
+    "npm-check": "^5.9.0"
   }
 }
