--- a/server/package.json
+++ b/server/package.json
@@ -10,18 +10,17 @@
   "author": "James Yang",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "graphql": "^14.4.2",
+    "graphql": "^0.13.2",
     "graphql-server-express": "^1.3.4",
     "graphql-tools": "^4.0.5",
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.19.1"
   },
-  "devDependencies": {
-    "npm-check": "^5.9.0"
-  }
+  "devDependencies": {}
 }
